--- a/css/styles.css
+++ b/css/styles.css
@@ -1,2 +1,48 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+
+
+.container {
+  max-width: 1290px;
+  margin: 0 auto;
+  padding: 0 20px;
+}
+
+ul,
+li, a {
+  text-decoration: none;
+  list-style: none;
+}
+
+.header-inner {
+    width: 100%;
+    min-height: 80px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.header-nav__list {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.header-nav__item:not(:last-child) {
+    margin-right: 90px;
+}
+
+.logo-wrapper {
+    max-width: 400px;
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
 
 
